Some progress on assignment 3.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ cpp_results_*/
 _minted*/
 report_old/
 CN_results.npy
+
+# LaTeX stuff
+report/*.aux
+report/*.bbl
+report/*.bcf
+report/*.blg
+report/*.log
+report/*.out
+report/*.run.xml
+report/*.synctex.gz
