--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,14 @@ CN_results.npy
 *.npy
 
 # LaTeX stuff
-*/report/*.aux
-*/report/*.bbl
-*/report/*.bcf
-*/report/*.blg
-*/report/*.log
-*/report/*.out
-*/report/*.run.xml
-*/report/*.synctex.gz
+*/report*/*.aux
+*/report*/*.bbl
+*/report*/*.bcf
+*/report*/*.blg
+*/report*/*.log
+*/report*/*.out
+*/report*/*.run.xml
+*/report*/*.synctex.gz
+*/report*/*.fdb_latexmk
+*/report*/*.fls
+*/report*/*.dvi
